--- a/web/frontend/main-page/index.html
+++ b/web/frontend/main-page/index.html
@@ -275,6 +275,7 @@
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
 <script src="swiper.js"></script>
 </body>
 </html>
