--- a/web/frontend/main-page/index.html
+++ b/web/frontend/main-page/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Couch Surfing</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../login-form/styles.css">
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -37,9 +38,27 @@
     <a href="#" class="cabinet-item">Навигация по сайту</a>
     <div class="user-actions">
         <a href="#" class="help-link">HELP</a>
-        <a href="#" class="logout-link">LOG OUT</a>
+        <a href="#" class="login-link" id="login-link" onClick="showLogin()">LOG IN</a>
+        <a href="#" class="logout-link" id="logout-link" style="display: none;">LOG OUT</a>
     </div>
 </nav>
+
+<div id="login-modal" class="login">
+    <div id="login-container" class="login-container">
+        <h2>Авторизация</h2>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="username-login" class="personal-form-label">Email:</label>
+                <input type="text" id="username-login" name="username" class="personal-form-input-login filled" placeholder="Ваша почта" required>
+            </div>
+            <div class="form-group">
+                <label for="password-login" class="personal-form-label">Пароль:</label>
+                <input type="password" id="password-login" name="password" class="personal-form-input-login" placeholder="Пароль" required>
+            </div>
+            <button type="submit" id="submit-login" class="center-button">Войти</button>
+        </form>
+    </div>
+</div>
 
 <div class="travel-russia">
     <h1 class="travel-heading">ПУТЕШЕСТВУЙ ПО РОССИИ</h1>
@@ -156,7 +175,7 @@
             <div class="image-column">
                 <div class="image-wrapper">
                     <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/69b52f90d29ec084b21f9659cb965829f2fb6bef060def7847107651cf3c6938?apiKey=34d7d013791846f1943a6733fbd2383a&" alt="" class="image" />
-                    <button class="register-button" onclick="redirectToPage('/CouchSerfing2024/web/frontend/registration-form/index.html')">Зарегистрироваться</button>
+                    <button class="register-button" id="registration-button">Зарегистрироваться</button>
                 </div>
             </div>
         </div>
@@ -290,6 +309,8 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
+<script src="../login-form/script.js"></script>
+<script src="../auth.js"></script>
 <script src="swiper.js"></script>
 </body>
 </html>
